--- a/app/Modules/PhobosTheme/Resources/Assets/less/frontend.less
+++ b/app/Modules/PhobosTheme/Resources/Assets/less/frontend.less
@@ -207,6 +207,10 @@ a:hover { color: @primaryColor; text-decoration: none }
     margin-top: 10px;
 }
 
+#comments .comment .text { 
+  word-wrap: break-word; 
+}
+
 
 /*
  * Modules
