Updated legacy icons to FontAwesome 5

--- a/resources/assets/less/shared.less
+++ b/resources/assets/less/shared.less
@@ -49,7 +49,7 @@
     margin: 20px 0px; padding: 0px 10px; background-color: #EEE;
     &.show { padding-bottom: 10px; }
     .spoiler-toggle { padding: 10px 0px; cursor: pointer }
-    .spoiler-toggle::before { content: "\f0da"; font-family: 'FontAwesome' }
+    .spoiler-toggle::before { content: "\f0da"; font-family: 'Font Awesome\ 5 Free;' }
     &.show {
         .spoiler { height: auto; overflow: visible; }
         .spoiler-toggle::before { content: "\f0d7"; }
